# duration

./: README.md  duration.py  main.py  pyproject.toml  setup.py  util.py
.github/workflows/: styles.yml  test.yml
app/: calendar.py  duration.py  iso_duration.py
scripts/: format  lint  test
src/: duration.py  exceptions.py  iso_duration.py  main.py  util.py
src/duration/: __init__.py  duration.py  exceptions.py  iso_duration.py
src/duration_parser/: duration.py  exceptions.py  iso_duration.py  util.py
src/nano_duration/: __init__.py  delta_duration.py  duration.py  exceptions.py  iso_duration.py
src/nano_duration/calendar/: __init__.py
tests/: test_calculate_duration_parts.py  test_generator.py  test_parser.py
