[tool.poetry]
name = "durationparser"
version = "0.1.0"
description = ""
authors = ["xenups <xenups@outlook.com>"]
readme = "README.md"
packages = [{include = "durationparser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.10.1"
black = "^22.10.0"
pytest = "^7.2.0"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
