[tool.poetry]
name = "nano_duration"
version = "2.0.0"
description = ""
authors = ["xenups <amirhossein@void-star.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.10.1"
black = "^22.10.0"
pytest = "^7.2.0"
pip = "^22.3.1"
install = "^1.3.5"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
flake8-fixme = "^1.1.1"
pytest-env = "^0.8.1"
mypy = "^0.991"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
